<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="60dp"
            android:layout_height="90dp"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_description"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/poster_aquaman"
            android:contentDescription="@string/content_description"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/title_movie"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_poster"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/title_movie"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            android:textSize="14sp"
            android:layout_marginTop="3dp"/>

        <View
            android:id="@+id/vw_right_release"
            android:layout_width="2dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/tv_release"
            app:layout_constraintBottom_toBottomOf="@id/tv_release"
            app:layout_constraintLeft_toRightOf="@id/tv_release"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/title_movie"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toRightOf="@id/vw_right_release"
            android:textSize="14sp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="5dp"
            app:drawableStartCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/lorem"
            app:layout_constraintTop_toBottomOf="@id/tv_rating"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="16sp"
            android:layout_marginTop="3dp"
            android:ellipsize="end"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>